--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -17,8 +17,10 @@
 .menuBar {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-end;
   justify-content: space-between;
+  padding: 0%;
+  margin: 0%;
 }
 
 .press-effect {
@@ -84,4 +86,5 @@
   justify-content: center;
   flex-direction: column;
   text-align: center;
+  padding-bottom: 0%;
 }
