--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -5,7 +5,7 @@
   justify-content: center;
   padding: 5%;
   background-color: #ffffff;
-  background: linear-gradient(180deg, #ffffff 10%, #f5fbff 90%, #ffffff 100%);
+  background: linear-gradient(180deg, #f5fbff 0%, #ffffff 100%);
   padding-top: calc(5% + 80px);
 }
 
