added top sliders with some UI changes

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -5,8 +5,8 @@
   justify-content: center;
   padding: 5%;
   background-color: #ffffff;
-  background: linear-gradient(180deg, #f5fbff 0%, #ffffff 100%);
-  padding-top: calc(5% + 80px);
+  background: linear-gradient(180deg, #ffffff 10%, #f8fcff 35%);
+  padding-top: calc(5% + 60px);
 }
 
 .user-info {
@@ -59,6 +59,17 @@
   padding: 0px;
   margin: 0px;
   line-height: 22px;
+}
+.LatestNews-title {
+  font-size: 16px;
+  font-weight: 600;
+  color: #1d1d1b;
+  font-family: "Jost", sans-serif;
+  align-self: baseline;
+  padding: 0px;
+  margin: 0px;
+  line-height: 22px;
+  margin-bottom: 15px;
 }
 .subtitle-text {
   font-size: 12px;
@@ -114,19 +125,20 @@
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   border: none;
-  width: 15px;
+  width: 5px;
   position: absolute;
-  right: 0px;
+  right: -2px;
   top: 0%;
   background-color: #e5f4f9;
   height: "100%";
   padding-top: 80px;
-  padding-bottom: 80px;
+  padding-bottom: 87.5px;
+  margin: 0%;
 }
 
 .next-btn:active {
-  -webkit-transform: scale(0.95);
-  transform: scale(0.95);
+  -webkit-transform: scale(0.97);
+  transform: scale(0.97);
   background-color: #e5f4f9;
 }
 .prev-btn {
@@ -137,7 +149,7 @@
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   border: none;
-  width: 15px;
+  width: 5px;
   position: absolute;
   left: 0px;
   top: 0%;
