--- a/src/components/NewsCard/newsCard.css
+++ b/src/components/NewsCard/newsCard.css
@@ -3,10 +3,23 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: baseline;
+  width: 160px;
+  border-radius: 7px;
+  user-select: none;
+  /* margin-left: 30px; */
+  margin-right: 20px;
+  filter: drop-shadow(0px 0px 14px rgba(214, 213, 213, 0.25));
+}
+.news-container2 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: baseline;
   width: 145px;
   border-radius: 7px;
   user-select: none;
   margin-left: 40px;
+  margin-right: 40px;
 }
 
 .news-info {
@@ -14,14 +27,15 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: baseline;
-  width: 100%;
+  width: calc(100% - 10px);
   margin: 0px;
   border-top-left-radius: 7px;
-  border-top-right-radius: 7px;
   margin-top: -10px;
   padding: 5px;
   z-index: 1;
   background-color: #ffffff;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .news-img {
